objects/UserHistory__c/UserHistory__c.object-meta.xml
<CustomObject>
    <label>UserHistory</label>
    <nameField>
        <displayFormat>UH-{000000}</displayFormat>
        <label>UserHistory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UserHistory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>