objects/UserHistory__c/fields/NewValue__c.field-meta.xml
<CustomField>
    <fullName>NewValue__c</fullName>
    <inlineHelpText>This is the new value of [Field] on the User record that was changed</inlineHelpText>
    <label>NewValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>