objects/UserHistory__c/fields/OldValue__c.field-meta.xml
<CustomField>
    <fullName>OldValue__c</fullName>
    <inlineHelpText>This is the previous value of [Field] on the User record  that was changed</inlineHelpText>
    <label>OldValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>