objects/UserHistory__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the user record that was changed</description>
    <label>UserId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserHistory</relationshipName>
    <type>Lookup</type>
</CustomField>