objects/UserHistory__c/listViews/Changes_to_Sales_Systems.listView-meta.xml
<ListView>
    <fullName>Changes_to_Sales_Systems</fullName>
    <columns>NAME</columns>
    <columns>UserId__c</columns>
    <columns>Field__c</columns>
    <columns>OldValue__c</columns>
    <columns>NewValue__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UserId__c</field>
        <operation>equals</operation>
        <value>Savannah Morehouse</value>
    </filters>
    <label>Changes to Sales Systems</label>
</ListView>