objects/UserHistory__c/listViews/Disable_Tanium_Custom_Triggers.listView-meta.xml
<ListView>
    <fullName>Disable_Tanium_Custom_Triggers</fullName>
    <columns>NAME</columns>
    <columns>UserId__c</columns>
    <columns>Field__c</columns>
    <columns>OldValue__c</columns>
    <columns>NewValue__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Field__c</field>
        <operation>equals</operation>
        <value>Disable Tanium Custom Triggers</value>
    </filters>
    <label>Disable Tanium Custom Triggers</label>
</ListView>